--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,34 +1,39 @@
-<footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col one-half">
-      <h2 class="footer-heading">{{ site.title | escape }}</h2>
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+<footer>
+      <nav class="nav-footer">
+        <ul>
+          <li><a href="#whys">5 Whys I wanna be a UX Designer</a></li>
+          <li><a href="#about">Introduction card - others about me</a></li>
+          <li><a href="#emphaty">Emphaty map - me about me</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#education">Education</a></li>
         </ul>
-      </div>
-
-      <div class="footer-col one-half">
-        <p>{{- site.description | escape -}}</p>
-      </div>
-
-      <div class="social-links">
-        {%- include social.html -%}
-      </div>
-    </div>
-
-  </div>
-
-</footer>
+      </nav>
+      <section class="contacts-footer">
+        <ul>
+          <li>
+            <a href="mailto:joana.miranda25@gmail.com">
+              <img src="assets/images/Joana-Miranda-Portfolio-Email.svg" alt="Email icon">
+              <span>Email</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/joana-miranda-aa89863b/" target="_blank">
+              <img src="assets/images/Joana-Miranda-Portfolio-Linkedin.svg" alt="Linkedin logo">
+              <span title="Website name">Linkedin</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://medium.com/@joana.miranda25" target="_blank">
+              <img src="assets/images/Joana-Miranda-Portfolio-Medium.svg" alt="Medium logo">
+              <span title="Webite name">Medium</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.behance.net/joanamiran4db5" target="_blank">
+              <img src="assets/images/Joana-Miranda-Portfolio-Behance.svg" alt="Behance logo">
+              <span title="Website name">Behance</span>
+            </a>
+          </li>
+        </ul>
+        </section>
+    </footer>
