--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {%- include header.html -%}
 
    <main class="container">
-     <div class="wrapper">
+     <div>
        {{ content }}
      </div>
    </main>
