Transformar Projects em Posts Jekyll

--- a/_sass/omeuestilo.scss
+++ b/_sass/omeuestilo.scss
@@ -1,5 +1,6 @@
 @import "header";
 @import "footer";
+@import "button";
 
 *{
   	margin: 0;
@@ -105,32 +106,6 @@ img {
 .card figcaption {
 	line-height: 1.4;
 	margin-top: 10px;
-}
-
-.one-project .button {
-	color: black;
-	box-shadow: 8px 10px #2F2929;
-	border: 3px solid #2F2929;
-	font-size: 16px;
-	font-weight: bold;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	text-decoration: none;
-	text-align: center;
-	display: inline-block;
-	padding: 15px 32px;
-	margin: 20px 0 16px 0;
-}
-
-.one-project .button:hover {
-	color: white;
-	background-color: #2F2929; 
-}
-
-.one-project .button::after {
-	content: "";
-	display: block;
-	clear: both;
 }
 
 .one-project p {
