--- a/_sass/cards-and-projects.scss
+++ b/_sass/cards-and-projects.scss
@@ -1,18 +1,10 @@
-#projects ul {
-	padding-left: 0;
-}
-
 .card, .one-project {
-	min-width: 200px;
-	width: 100%;
-	vertical-align: top;
-	display: inline-block;
 	margin: 0 10px 40px 0;
 }
 
 .card figcaption {
 	line-height: 1.4;
-	margin-top: 10px;
+	margin: 10px 0 0 10px;
 }
 
 .one-project p {
@@ -20,10 +12,12 @@
 }
 
 
-@media only screen and ( min-width: 800px ) {
+@media only screen and ( min-width: 768px ) {
 
     .card, .one-project {
-      width: 49%;
-      float: left;
-    }
-  }
+		width: 49%;
+		display: inline-flex;
+ 		flex-wrap: wrap;
+		padding: 0;
+		}
+ 	}
