--- a/_sass/cards-and-projects.scss
+++ b/_sass/cards-and-projects.scss
@@ -1,10 +1,10 @@
 .card, .one-project {
-	margin: 0 10px 40px 0;
+	margin-bottom: 40px;
 }
 
 .card figcaption {
 	line-height: 1.4;
-	margin: 10px 0 0 10px;
+	margin: 10px 0 0 20px;
 }
 
 .one-project p {
@@ -14,10 +14,5 @@
 
 @media only screen and ( min-width: 768px ) {
 
-    .card, .one-project {
-		width: 49%;
-		display: inline-flex;
- 		flex-wrap: wrap;
-		padding: 0;
-		}
+
  	}
