--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
           <li><a href="#education">Education</a></li>
         </ul>
       </nav>
-      <section class="contacts-footer">
-        <ul>
+      <section>
+        <ul class="contacts-footer">
           <li>
             <a href="mailto:joana.miranda25@gmail.com">
               <img src="assets/images/Joana-Miranda-Portfolio-Email.svg" alt="Email icon">
