--- a/_sass/empathy.scss
+++ b/_sass/empathy.scss
@@ -1,7 +1,3 @@
-#empathy h1, #education h1  {
-	margin: -110px 0 0;
-}
-
 #empathy ul {
 	padding: 0;
 }
@@ -10,20 +6,17 @@
   	color: #000;
    	background: #F0E9DB;
     box-shadow: 3px 3px 3px #D8D4CC;
-    font-size: 18px;
+    font-size: 16px;
  	padding: 14px;
+	min-width: 160px;
 }
 
 #empathy li:first-child {
- 	background: #F3DBD6;
+ 	background: #000000;
 	z-index: -1; 
 }
 
-.post {
-	grid-column: col-start / 7;	
-}
-
-#empathy li:nth-child(3n+2) {
+#empathy li:nth-chi§ld(3n+2) {
  	background: #F3DBD6;
 }
 
