--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -26,3 +26,13 @@ footer {
 	width: 36px;
 	height: 36px;
 }
+
+
+
+
+@media only screen and ( min-width: 768px ) {
+
+.contacts-footer li {
+	display: flex;
+	justify-content: flex-end;
+}
