--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -42,8 +42,12 @@ header {
 }
 
 
+
+
 @media only screen and ( min-width: 768px ) {
 
-
-
+.menu {
+	display: inline-flex;
+	justify-content: flex-end;
 }
+
