--- a/_sass/empathy.scss
+++ b/_sass/empathy.scss
@@ -4,18 +4,22 @@
 
 #empathy ul {
 	padding: 0;
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	grid-column-gap: 10px;
+	grid-template-rows: repeat(11, 1fr);
+	height: 160px;
 }
 
 #empathy ul li { 
   	color: #000;
    	background: #F0E9DB;
     box-shadow: 3px 3px 3px #D8D4CC;
-    font-size: 18px;
+    font-size: 14px;
  	padding: 14px;
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	grid-gap: 20px;
-	grid-auto-rows: minmax(100px, auto);
+ 	line-height: 1.4;
+  	min-width: 110px;
+  	min-height: 110px;
 }
 
 #empathy li:first-child {
@@ -33,12 +37,72 @@
 
 .post-it1 {
 	grid-column: 1 / 6;
-	grid-row: 1;
+	grid-row: 1 / 2;
 }
 
 .post-it2 {
 	grid-column: 7 / 12;
-	grid-row: 1;
+	grid-row: 1 / 2;
+}
+
+.post-it3 {
+	grid-column: 2 / 7;
+	grid-row: 2 / 3;
+}
+
+.post-it4 {
+	grid-column: 7 / 12;
+	grid-row: 2 / 3;
+}
+
+.post-it5 {
+	grid-column: 1 / 6;
+	grid-row: 4 / 5;
+}
+
+.post-it6 {
+	grid-column: 7 / 12;
+	grid-row: 4 / 5;
+}
+
+.post-it7 {
+	grid-column: 2 / 7;
+	grid-row: 5 / 6;
+}
+
+.post-it8 {
+	grid-column: 7 / 12;
+	grid-row: 5 / 6;
+}
+
+.post-it9 {
+	grid-column: 1 / 6;
+	grid-row: 7 / 8;
+}
+
+.post-it10 {
+	grid-column: 8 / 13;
+	grid-row: 7 / 8;
+}
+
+.post-it11 {
+	grid-column: 3 / 8;
+	grid-row: 8 / 9;
+}
+
+.post-it12 {
+	grid-column: 2 / 7;
+	grid-row: 10 / 11;
+}
+
+.post-it13 {
+	grid-column: 8 / 13;
+	grid-row: 10 / 11;
+}
+
+.post-it14 {
+	grid-column: 3 / 8;
+	grid-row: 11 / 12;
 }
 
 .line-bottom {
@@ -55,4 +119,80 @@
 
 .line-top {
 	border-top: 3px solid black;
+}
+
+
+@media only screen and ( min-width: 768px ) {
+
+
+.post-it1 {
+	grid-column: 1 / 3;
+	grid-row: 2 / 3;
+}
+
+.post-it2 {
+	grid-column: 4 / 6;
+	grid-row: 2 / 3;
+}
+
+.post-it3 {
+	grid-column: 2 / 4;
+	grid-row: 3 / 4;
+}
+
+.post-it4 {
+	grid-column: 4 / 6;
+	grid-row: 3 / 4;
+}
+
+.post-it5 {
+	grid-column: 7 / 9;
+	grid-row: 2 / 3;
+}
+
+.post-it6 {
+	grid-column: 10 / 12;
+	grid-row: 2 / 3;
+}
+
+.post-it7 {
+	grid-column: 8 / 9;
+	grid-row: 3 / 4;
+}
+
+.post-it8 {
+	grid-column: 10 / 12;
+	grid-row: 3 / 4;
+}
+
+.post-it9 {
+	grid-column: 2 / 4;
+	grid-row: 5 / 6;
+}
+
+.post-it10 {
+	grid-column: 4 / 6;
+	grid-row: 5 / 6;
+}
+
+.post-it11 {
+	grid-column: 3 / 5;
+	grid-row: 6 / 7;
+}
+
+.post-it12 {
+	grid-column: 7 / 9;
+	grid-row: 5 / 6;
+}
+
+.post-it13 {
+	grid-column: 10 / 12;
+	grid-row: 5 / 6;
+}
+
+.post-it14 {
+	grid-column: 8 / 10;
+	grid-row: 6 / 7;
+}
+
 }
