Layout correções - Header e Footer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
   <a href="#top" class="logo">
     <span>Joana Miranda Portfolio</span>
-    <img src="images/Joana-Miranda-Portfolio-Logo@2x.png" srcset="images/Joana-Miranda-Portfolio-Logo@2x.png 2x" alt="logo Joana Miranda">
+    <img src="images/Joana-Miranda-Portfolio-Logo@.png" alt="logo Joana Miranda">
   </a>
   
   <nav class="menu">
