--- a/_sass/button.scss
+++ b/_sass/button.scss
@@ -7,7 +7,7 @@
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	padding: 15px 32px;
-	margin-left: 20px;
+	margin: 20px 0 40px 20px;
 }
 
 .button:hover {
