--- a/_sass/cards-and-projects.scss
+++ b/_sass/cards-and-projects.scss
@@ -1,3 +1,13 @@
+#about, .projects {
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	grid-gap: 20px;
+}
+
+.card1, .card2, .card3, .card4, .projects > *, h1 {
+	grid-column: 1 / 13;
+}
+
 #about {
 	margin-bottom: 40px;
 }
@@ -13,13 +23,6 @@
 
 
 @media only screen and ( min-width: 768px ) {
-
-	#about, .projects {
-		display: grid;
-		grid-template-columns: repeat(12, 1fr);
-		grid-gap: 20px;
-		grid-auto-rows: minmax(100px, auto);
-	}
 
 	#about h1, .projects h1 {
 		grid-column: 1 / 13;
