--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -39,6 +39,10 @@ header {
  	text-decoration: none;
 }
 
+.menu ul li a:hover {
+	color: #2F2929;
+}
+
 
 @media only screen and ( min-width: 768px ) {
 	
