SASS - Colors + Type

--- a/_sass/button.scss
+++ b/_sass/button.scss
@@ -1,21 +1,21 @@
 .button {
-	color: black;
-	background-color: #FFFBF3; 
-	box-shadow: 8px 10px #2F2929;
-	border: 3px solid #2F2929;
+	color: $mygray;
+	background-color: $mybeige; 
+	box-shadow: 8px 10px $mygray;
+	border: 3px solid $mygray;
 	font-size: 14px;
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	padding: 15px 32px;
 	margin: 20px 0 40px 20px;
-	background: linear-gradient(to right, #2F2929 50%, #FFFBF3 50%);
+	background: linear-gradient(to right, $mygray 50%, $mybeige 50%);
  	background-size: 200% 100%;
 	background-position: right bottom;
 	transition: all .5s ease-out;
 }
 
 .button:hover {
-	color: white;
+	color: $mybeige;
 	background-position: left bottom;
 }
