--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
   <nav class="menu">
     <ul>
        <li><a href="#about">About Me</a></li>
-       <li><a href="#projects">Projects</a></li>
+       <li><a href="#myprojects">Projects</a></li>
        <li><a href="#education">Education</a></li>
        <li><a href="#contacts">Contacts</a></li>
     </ul>
