--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,5 +1,5 @@
 header {	
-  	background-color: #2F2929;
+  	background-color: $mygray;
     width: 100%;
   	height: 100px; 
     top: 0;
@@ -21,7 +21,7 @@ header {
 }
 
 .menu ul {
-	font-family: 'Barlow Semi Condensed', sans-serif;
+	font-family: title-type;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	display: flex;
@@ -34,13 +34,13 @@ header {
 }
 
 .menu ul li a {
-	color: #F3DBD6;
+	color: $mypink;
  	font-size: 16px; 
  	text-decoration: none;
 }
 
 .menu ul li a:hover {
-	color: #2F2929;
+	color: $mygray;
 }
 
 
