--- a/_sass/omeuestilo.scss
+++ b/_sass/omeuestilo.scss
@@ -6,6 +6,17 @@
 @import "contacts";
 @import "footer";
 
+$mygray: #2F2929;
+$mylightgray: #F0E9DB;
+$mybeige: #FFFBF3;
+$mypink: #F3DBD6;
+$myyelllow: #FFF469;
+
+$sans-type: ('Roboto', sans-serif);
+$title-type: ('Barlow Semi Condensed', sans-serif);
+
+$margin-0: margin-left: 0;
+
 
 *{
   	margin: 0;
@@ -19,8 +30,8 @@
 }
 
 body {
-	color: #2F2929;
-	font-family: 'Roboto', sans-serif;
+	color: $mygray;
+	font-family: $sans-type;
 	font-size: 14px;
   	line-height: 1.6;
 	text-align: left;
@@ -29,7 +40,7 @@ body {
 }
 
 body a {
-	color: #2F2929;
+	color: $mygray;
 	cursor: cell;
 	text-decoration: none;
 	list-style-type: none;
@@ -44,23 +55,23 @@ nav a {
 }
 
 nav a:hover {
-	color: #2F2929;
-	background-color: #FFF469;
+	color: $mygray;
+	background-color: $myyelllow;
 }
 
 ::selection { 
-	background: #FFF469;
+	background: $myyelllow;
 }
 
 h1 {
-	font-family: 'Barlow Semi Condensed', sans-serif;
+	font-family: $title-type;
 	font-size: 32px;
 	line-height: 1;
 	margin: 50px 0 20px 20px;
 }
 
 h2 {
-	font-family: 'Barlow Semi Condensed', sans-serif;
+	font-family: $title-type;
 	font-size: 24px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
@@ -68,7 +79,7 @@ h2 {
 }
 
 h3 {
-	font-family: 'Roboto', sans-serif;
+	font-family: $sans-type;
 	font-size: 18px;
 	line-height: 1.8;
 	margin-left: 20px;
@@ -101,11 +112,13 @@ ul, ol {
 	}
 
 	h1 {
-		font-size: 38px;
+		font-size: 42px;
+		margin-left: $margin-0;
 	}
 
 	h2 {
 		font-size: 30px;
+		margin-left: $margin-0;
 	}
 
 	h3 {
